--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -53,7 +52,7 @@
 
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
-    import { getDatabase, ref, push, onValue, set, get, child, update } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-database.js";
+    import { getDatabase, ref, push, onValue, set, get, update, off } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-database.js";
 
     const firebaseConfig = {
       apiKey: "AIzaSyCt7_62tfKbhkhwfbbWXrd4Y5oL2XTdUMU",
@@ -88,37 +87,56 @@
     let score = 0;
     let interval;
     let questions = [];
+    let playerListener = null;
+    let startedListener = null;
 
     createRoomBtn.onclick = async () => {
-      const roomRef = push(ref(db, 'rooms'));
-      roomId = roomRef.key;
-      location.hash = roomId;
-      await set(roomRef, {
-        host: playerId,
-        players: {
-          [playerId]: { name: playerName, score: 0 }
-        },
-        started: false
-      });
-      showWaitingRoom();
+      try {
+        const roomRef = push(ref(db, 'rooms'));
+        roomId = roomRef.key;
+        location.hash = roomId;
+        await set(roomRef, {
+          host: playerId,
+          players: {
+            [playerId]: { name: playerName, score: 0, finished: false }
+          },
+          started: false
+        });
+        showWaitingRoom();
+      } catch (error) {
+        console.error('Error creating room:', error);
+        alert('Failed to create room. Please try again.');
+      }
     };
 
     async function joinRoom() {
-      if (!roomId) return;
-      const roomRef = ref(db, 'rooms/' + roomId);
-      const roomSnap = await get(roomRef);
-      if (roomSnap.exists()) {
-        const data = roomSnap.val();
-        if (!data.players || !data.players[playerId]) {
-          await update(roomRef, {
-            ['players/' + playerId]: { name: playerName, score: 0 }
-          });
-        }
-        if (data.started) {
-          startQuiz();
+      if (!roomId) {
+        alert('No room specified. Please create or join a room.');
+        return;
+      }
+      try {
+        const roomRef = ref(db, 'rooms/' + roomId);
+        const roomSnap = await get(roomRef);
+        if (roomSnap.exists()) {
+          const data = roomSnap.val();
+          if (!data.players[playerId]) {
+            await update(roomRef, {
+              ['players/' + playerId]: { name: playerName, score: 0, finished: false }
+            });
+          }
+          if (data.started) {
+            startQuiz();
+          } else {
+            showWaitingRoom();
+          }
         } else {
-          showWaitingRoom();
+          alert('Room does not exist.');
+          location.hash = '';
+          roomId = '';
         }
+      } catch (error) {
+        console.error('Error joining room:', error);
+        alert('Failed to join room. Please try again.');
       }
     }
 
@@ -126,7 +144,9 @@
       lobby.classList.add('hidden');
       waitingRoom.classList.remove('hidden');
       roomLinkInput.value = location.href;
-      onValue(ref(db, 'rooms/' + roomId + '/players'), snapshot => {
+      
+      playerListener = ref(db, 'rooms/' + roomId + '/players');
+      onValue(playerListener, snapshot => {
         playerList.innerHTML = '';
         snapshot.forEach(child => {
           const li = document.createElement('li');
@@ -134,18 +154,27 @@
           playerList.appendChild(li);
         });
       });
-      onValue(ref(db, 'rooms/' + roomId + '/started'), snapshot => {
+
+      startedListener = ref(db, 'rooms/' + roomId + '/started');
+      onValue(startedListener, snapshot => {
         if (snapshot.val()) {
           startQuiz();
         }
       });
     }
 
-    startGameBtn.onclick = () => {
-      update(ref(db, 'rooms/' + roomId), { started: true });
+    startGameBtn.onclick = async () => {
+      try {
+        await update(ref(db, 'rooms/' + roomId), { started: true });
+      } catch (error) {
+        console.error('Error starting game:', error);
+        alert('Failed to start game. Please try again.');
+      }
     };
 
     function startQuiz() {
+      if (playerListener) off(playerListener);
+      if (startedListener) off(startedListener);
       waitingRoom.classList.add('hidden');
       quiz.classList.remove('hidden');
       questions = generateQuestions().slice(0, 10);
@@ -187,23 +216,56 @@
       nextQuestion();
     }
 
-    function endGame() {
-      update(ref(db, 'rooms/' + roomId + '/players/' + playerId), { score });
-      quiz.classList.add('hidden');
+    async function endGame() {
+      clearInterval(interval);
+      try {
+        await update(ref(db, 'rooms/' + roomId + '/players/' + playerId), { score, finished: true });
+        quiz.classList.add('hidden');
+        const waiting = document.createElement('div');
+        waiting.innerHTML = "<h2>Waiting for other players to finish...</h2>";
+        document.body.appendChild(waiting);
+
+        const checkAllFinished = async () => {
+          try {
+            const snapshot = await get(ref(db, 'rooms/' + roomId + '/players'));
+            let allFinished = true;
+            snapshot.forEach(child => {
+              if (!child.val().finished) {
+                allFinished = false;
+              }
+            });
+            if (allFinished) {
+              showResults(snapshot);
+            } else {
+              setTimeout(checkAllFinished, 1000);
+            }
+          } catch (error) {
+            console.error('Error checking players:', error);
+          }
+        };
+
+        checkAllFinished();
+      } catch (error) {
+        console.error('Error ending game:', error);
+        alert('Error saving score. Please try again.');
+      }
+    }
+
+    function showResults(snapshot) {
+      const waiting = document.querySelector("body > div:last-child");
+      if (waiting) waiting.remove();
       results.classList.remove('hidden');
-      onValue(ref(db, 'rooms/' + roomId + '/players'), snapshot => {
-        const results = [];
-        snapshot.forEach(child => {
-          results.push({ name: child.val().name, score: child.val().score });
-        });
-        results.sort((a, b) => b.score - a.score);
-        scoreBoard.innerHTML = '';
-        results.forEach((r, i) => {
-          const li = document.createElement('li');
-          li.textContent = `${i + 1}. ${r.name}: ${r.score} points`;
-          scoreBoard.appendChild(li);
-        });
-      }, { onlyOnce: true });
+      const resultsArr = [];
+      snapshot.forEach(child => {
+        resultsArr.push({ name: child.val().name, score: child.val().score });
+      });
+      resultsArr.sort((a, b) => b.score - a.score);
+      scoreBoard.innerHTML = '';
+      resultsArr.forEach((r, i) => {
+        const li = document.createElement('li');
+        li.textContent = `${i + 1}. ${r.name}: ${r.score} points`;
+        scoreBoard.appendChild(li);
+      });
     }
 
     function generateQuestions() {
