--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Multiplayer Quiz Game</title>
+  <title>Многопользовательская Викторина</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -24,30 +24,35 @@
       font-size: 24px;
       margin-bottom: 10px;
     }
+    #restartBtn {
+      margin-top: 20px;
+      padding: 10px 20px;
+    }
   </style>
 </head>
 <body>
   <div id="lobby">
-    <h1>Multiplayer Quiz</h1>
-    <button id="createRoom">Create Room</button>
-    <input type="text" id="roomLink" readonly>
+    <h1>Многопользовательская Викторина</h1>
+    <button id="createRoom">Создать комнату</button>
+    <input type="text" id="roomLink" readonly placeholder="Ссылка на комнату">
   </div>
 
   <div id="waitingRoom" class="hidden">
-    <h2>Waiting for players...</h2>
+    <h2>Ожидание игроков...</h2>
     <ul id="playerList"></ul>
-    <button id="startGame">Start Game</button>
+    <button id="startGame">Начать игру</button>
   </div>
 
   <div id="quiz" class="hidden">
     <div id="timer">10</div>
-    <h2 id="question">Question will appear here</h2>
+    <h2 id="question">Вопрос появится здесь</h2>
     <div id="answers"></div>
   </div>
 
   <div id="results" class="hidden">
-    <h2>Results</h2>
+    <h2>Результаты</h2>
     <ul id="scoreBoard"></ul>
+    <button id="restartBtn">Перезапустить игру</button>
   </div>
 
   <script type="module">
@@ -79,16 +84,18 @@
     const questionEl = document.getElementById('question');
     const answersEl = document.getElementById('answers');
     const scoreBoard = document.getElementById('scoreBoard');
+    const restartBtn = document.getElementById('restartBtn');
 
     let roomId = location.hash.replace('#', '') || '';
     let playerId = 'player_' + Math.random().toString(36).substr(2, 9);
-    let playerName = 'Player ' + playerId.substr(-4);
+    let playerName = 'Игрок ' + playerId.substr(-4);
     let currentQuestionIndex = 0;
     let score = 0;
     let interval;
     let questions = [];
     let playerListener = null;
     let startedListener = null;
+    let gameActive = false;
 
     createRoomBtn.onclick = async () => {
       try {
@@ -104,14 +111,14 @@
         });
         showWaitingRoom();
       } catch (error) {
-        console.error('Error creating room:', error);
-        alert('Failed to create room. Please try again.');
+        console.error('Ошибка создания комнаты:', error);
+        alert('Не удалось создать комнату. Пожалуйста, попробуйте снова.');
       }
     };
 
     async function joinRoom() {
       if (!roomId) {
-        alert('No room specified. Please create or join a room.');
+        alert('Комната не указана. Пожалуйста, создайте или присоединитесь к комнате.');
         return;
       }
       try {
@@ -130,13 +137,13 @@
             showWaitingRoom();
           }
         } else {
-          alert('Room does not exist.');
+          alert('Комната не существует.');
           location.hash = '';
           roomId = '';
         }
       } catch (error) {
-        console.error('Error joining room:', error);
-        alert('Failed to join room. Please try again.');
+        console.error('Ошибка присоединения к комнате:', error);
+        alert('Не удалось присоединиться к комнате. Пожалуйста, попробуйте снова.');
       }
     }
 
@@ -167,8 +174,8 @@
       try {
         await update(ref(db, 'rooms/' + roomId), { started: true });
       } catch (error) {
-        console.error('Error starting game:', error);
-        alert('Failed to start game. Please try again.');
+        console.error('Ошибка запуска игры:', error);
+        alert('Не удалось начать игру. Пожалуйста, попробуйте снова.');
       }
     };
 
@@ -180,11 +187,12 @@
       questions = generateQuestions().slice(0, 10);
       currentQuestionIndex = 0;
       score = 0;
+      gameActive = true;
       nextQuestion();
     }
 
     function nextQuestion() {
-      if (currentQuestionIndex >= questions.length) {
+      if (!gameActive || currentQuestionIndex >= questions.length) {
         endGame();
         return;
       }
@@ -218,11 +226,12 @@
 
     async function endGame() {
       clearInterval(interval);
+      gameActive = false;
       try {
         await update(ref(db, 'rooms/' + roomId + '/players/' + playerId), { score, finished: true });
         quiz.classList.add('hidden');
         const waiting = document.createElement('div');
-        waiting.innerHTML = "<h2>Waiting for other players to finish...</h2>";
+        waiting.innerHTML = "<h2>Ожидание завершения игры другими игроками...</h2>";
         document.body.appendChild(waiting);
 
         const checkAllFinished = async () => {
@@ -240,14 +249,14 @@
               setTimeout(checkAllFinished, 1000);
             }
           } catch (error) {
-            console.error('Error checking players:', error);
+            console.error('Ошибка проверки игроков:', error);
           }
         };
 
         checkAllFinished();
       } catch (error) {
-        console.error('Error ending game:', error);
-        alert('Error saving score. Please try again.');
+        console.error('Ошибка завершения игры:', error);
+        alert('Ошибка сохранения счета. Пожалуйста, попробуйте снова.');
       }
     }
 
@@ -263,23 +272,37 @@
       scoreBoard.innerHTML = '';
       resultsArr.forEach((r, i) => {
         const li = document.createElement('li');
-        li.textContent = `${i + 1}. ${r.name}: ${r.score} points`;
+        li.textContent = `${i + 1}. ${r.name}: ${r.score} очков`;
         scoreBoard.appendChild(li);
       });
+      restartBtn.onclick = () => resetGame();
+    }
+
+    function resetGame() {
+      results.classList.add('hidden');
+      lobby.classList.remove('hidden');
+      roomId = '';
+      location.hash = '';
+      currentQuestionIndex = 0;
+      score = 0;
+      gameActive = false;
+      if (playerListener) off(playerListener);
+      if (startedListener) off(startedListener);
+      joinRoom();
     }
 
     function generateQuestions() {
       return [
-        { question: "Capital of France?", answers: ["Paris", "Berlin", "Rome", "London"], correct: "Paris" },
+        { question: "Столица Франции?", answers: ["Париж", "Берлин", "Рим", "Лондон"], correct: "Париж" },
         { question: "5 + 7 = ?", answers: ["10", "12", "13", "14"], correct: "12" },
-        { question: "Largest planet?", answers: ["Earth", "Mars", "Jupiter", "Saturn"], correct: "Jupiter" },
-        { question: "Color of sun?", answers: ["Blue", "White", "Yellow", "Red"], correct: "Yellow" },
-        { question: "Water formula?", answers: ["CO2", "H2O", "O2", "HCl"], correct: "H2O" },
-        { question: "Fastest animal?", answers: ["Cheetah", "Tiger", "Eagle", "Falcon"], correct: "Falcon" },
-        { question: "First man on moon?", answers: ["Armstrong", "Gagarin", "Glenn", "Aldrin"], correct: "Armstrong" },
-        { question: "Programming language?", answers: ["Python", "Snake", "Dog", "Lion"], correct: "Python" },
-        { question: "How many days in week?", answers: ["5", "6", "7", "8"], correct: "7" },
-        { question: "HTML stands for?", answers: ["HyperText Markup Language", "Hyper Tool", "Markup Line", "Text Machine"], correct: "HyperText Markup Language" }
+        { question: "Самая большая планета?", answers: ["Земля", "Марс", "Юпитер", "Сатурн"], correct: "Юпитер" },
+        { question: "Цвет солнца?", answers: ["Синий", "Белый", "Желтый", "Красный"], correct: "Желтый" },
+        { question: "Формула воды?", answers: ["CO2", "H2O", "O2", "HCl"], correct: "H2O" },
+        { question: "Самое быстрое животное?", answers: ["Гепард", "Тигр", "Орел", "Сокол"], correct: "Сокол" },
+        { question: "Первый человек на Луне?", answers: ["Армстронг", "Гагарин", "Гленн", "Олдрин"], correct: "Армстронг" },
+        { question: "Язык программирования?", answers: ["Питон", "Змея", "Собака", "Лев"], correct: "Питон" },
+        { question: "Сколько дней в неделе?", answers: ["5", "6", "7", "8"], correct: "7" },
+        { question: "Что означает HTML?", answers: ["Язык разметки гипертекста", "Гипер инструмент", "Линия разметки", "Текстовый механизм"], correct: "Язык разметки гипертекста" }
       ];
     }
 
